Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8168480/T8168480b.out
T8168480b.java:11:57: compiler.err.unreachable.stmt
1 error
